Controlador de editar y eliminar sector

--- a/jobs/Views/Mantenedor/CreateSector.cshtml
+++ b/jobs/Views/Mantenedor/CreateSector.cshtml
@@ -27,6 +27,7 @@
         </div>
         <hr />
         <button type="submit">Registrar</button>
+        <a href="@Url.Action("Index","Mantenedor")">Cancelar</a>
     </form>
 </div>
 
