Cpnfiguracion css de leds

--- a/jobs/Views/Shared/FirstPage.cshtml
+++ b/jobs/Views/Shared/FirstPage.cshtml
@@ -16,13 +16,13 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="@Url.Content("~/Content/navdropdown.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/.btn-neon.css")" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/e3725c1fd8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
         <a>@Html.ActionLink("Tenaris Ligths", "Inicio", "Mantenedor", new { @class = "brand" })</a>
-        @*<a href="#" class="brand">Tenaris Ligth</a>*@
         <div class="navigation">
             <div class="navigation-items">
                 <a>@Html.ActionLink("Crear Usuario", "CreateUser", "Mantenedor")</a>
