Se agregaron dropdownlist para seleccionar sector y nave para filtrarlo

--- a/jobs/Views/Shared/FirstPage.cshtml
+++ b/jobs/Views/Shared/FirstPage.cshtml
@@ -1,7 +1,4 @@
-﻿@*@{
-    ViewBag.Title = "FirstPage";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}*@
+﻿
 
 <!DOCTYPE html>
 @using System.Web.Optimization;
@@ -26,8 +23,8 @@
         <div class="navigation">
             <div class="navigation-items">
                 <a>@Html.ActionLink("Crear Usuario", "CreateUser", "Mantenedor")</a>
-                <a href="#">Sector</a>
-                <a href="#">Nave</a>
+                <a>@Html.ActionLink("Crear Sector", "CreateSector", "Mantenedor")</a>                
+                <a>@Html.ActionLink("Sectores", "index", "Mantenedor")</a>                
                 <a href="#">Iniciar Sesion</a>
             </div>
         </div>
