--- a/jobs/Content/.btn-neon.css
+++ b/jobs/Content/.btn-neon.css
@@ -1,3 +1,5 @@
+
+
 body{
     margin:0;
     padding:0;
@@ -7,26 +9,33 @@ body{
     height: 100vh;
     background: black;
     font-family: consolas;
+    color:white;
 }
 .btn-neon{
     position:relative;
     display: inline-block;
     padding: 15px 30px;
-    color: black;
+    color: white;
     font-size: 24px;
     text-decoration: none;
     letter-spacing: 4px;
     overflow: hidden;
     transition: 0.2s;
+    background:black;
 }
 
 .btn-neon:hover{
     background: #fff;
     box-shadow: 0 0 10px #fff, 0 0 40px #fff, 0 0 80px #fff;
+    color:black;
 }
-.separacion{
-    position:relative;
+.separacion {
+    /*position: relative;*/
     margin: 50px 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
 }
 .btn-group{
     position: relative;
