--- a/jobs/Content/navdropdown.css
+++ b/jobs/Content/navdropdown.css
@@ -5,8 +5,9 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins",sans-serif;
-    color:white;
+    color: white;
 }
+
 
 header {
     z-index: 999;
@@ -43,6 +44,21 @@ header {
             transition: 0.3s ease;
         }
 
+            header .navigation .navigation-items a:before {
+                content: "";
+                position: absolute;
+                background: white;
+                height: 3px;
+                bottom: 0;
+                left: 0;
+                width: 0;
+                transition: 0.3s ease;
+            }
+
+            header .navigation .navigation-items a:hover:before {
+                width: 100%;
+            }
+
 section {
     padding: 100px 200px;
 }
@@ -71,37 +87,62 @@ section {
             letter-spacing: 5px;
             line-height: 75px;
             margin-bottom: 40px;
+            animation: animate 5s linear infinite;
+            color: grey;
         }
 
-        .home .content p {
+@keyframes animate {
+    0%,18%,20.1%,30%,50%,60.1%,65%,80%,90.1%,92% {
+        color: black;
+        text-shadow: none;
+    }
+
+    18.1%,20.1%,30%,50%,60.1%,65%,80.1%,90%,92.1%,100% {
+        color: #fff;
+        text-shadow: 0 0 10px #03bcf4, 0 0 10px #03bcf4, 0 0 20px #03bcf4, 0 0 40px #03bcf4, 0 0 80px #03bcf4, 0 0 160px #03bcf4,
+    }
+}
+
+.home .content h2 {
+    font-size: 4em;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    line-height: 75px;
+    margin-bottom: 40px;
+    animation: animate 5s linear infinite;
+    color: grey;
+}
+
+.home .content p {
+    margin-bottom: 20px;
+}
+
+.home .media-icons {
+    z-index: 888;
+    position: absolute;
+    right: 30px;
+    display: flex;
+    flex-direction: column;
+    transition: 0.5s ease;
+}
+
+    .home .media-icons a {
+        color: #fff;
+        font-size: 1.6em;
+        transition: 0.3s ease;
+    }
+
+        .home .media-icons a:not(:last-child) {
             margin-bottom: 20px;
         }
 
-    .home .media-icons {
-        z-index: 888;
-        position: absolute;
-        right: 30px;
-        display: flex;
-        flex-direction: column;
-        transition: 0.5s ease;
-    }
-
-        .home .media-icons a {
-            color: #fff;
-            font-size: 1.6em;
-            transition: 0.3s ease;
+        .home .media-icons a:hover {
+            transform: scale(1.3);
         }
 
-            .home .media-icons a:not(:last-child) {
-                margin-bottom: 20px;
-            }
-
-            .home .media-icons a:hover {
-                transform: scale(1.3);
-            }
-
 footer {
-    color: white; 
+    color: white;
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 300;
 }
