--- a/jobs/Views/Mantenedor/GetNavigationItems.cshtml
+++ b/jobs/Views/Mantenedor/GetNavigationItems.cshtml
@@ -8,36 +8,57 @@
 <link href="~/Content/.btn-neon.css" rel="stylesheet" />
 
 <div class="separacion">
-   
-
-        @if (ViewBag.Sectorlist != null)
-        {
 
 
-            @Html.DropDownListFor(m => m.IdSector, ViewBag.Sectorlist as SelectList, "Selecciona un Sector", new { @class = "btn-neon" })
-        }
+    @if (ViewBag.Sectorlist != null)
+    {
 
-        @Html.DropDownListFor(m => m.nave, new SelectList(""), "Seleccionar Nave", new { @class = "btn-neon" })
-    <a href="#" class="btn-neon">Buscar</a>
-        <script src="~/Scripts/jquery-3.4.1.min.js"></script>
-        <script>
 
-            $(document).ready(function () {
-                $("#IdSector").change(function () {
-                    var name = $(this).val();
+        @Html.DropDownListFor(m => m.IdSector, ViewBag.Sectorlist as SelectList, "Selecciona un Sector", new { @class = "btn-neon" })
+    }
 
-                    $.ajax({
-                        type: "GET",
-                        url: "/mantenedor/getnaves?name=" + name,
-                        contenttype: "html",
-                        success: function (response) {
+    @Html.DropDownListFor(m => m.nave, new SelectList(""), "Seleccionar Nave", new { @class = "btn-neon" })
+    <a href="#" id="buscarBtn" class="btn-neon">Buscar</a>
 
-                            $("#nave").empty();
-                            $("#nave").append(response);
-                        }
-                    })
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#IdSector").change(function () {
+                var name = $(this).val();
+
+                $.ajax({
+                    type: "GET",
+                    url: "/mantenedor/getnaves?name=" + name,
+                    contenttype: "html",
+                    success: function (response) {
+
+                        $("#nave").empty();
+                        $("#nave").append(response);
+                    }
                 })
             })
-        </script>
+        })
+        $(document).ready(function () {
+            $("#buscarBtn").click(function () {
+                var dropdownValue = $("#IdSector").val();
+
+                $.ajax({
+                    contenttype: "html",
+                    url: "/Mantenedor/Buscar",
+                    type: "GET",
+                    data: { dropdown: dropdownValue },
+                    success: function (response) {
+                        /*  $("#resultadosDiv").html(data);*/
+                        $("#columnas").empty();
+                        $("#columnas").append(response);
+
+                    }
+                });
+            });
+        });
+
+    </script>
+</div>
+<div class="btn-group" id="columnas">
 </div>
 
