--- a/jobs/Content/.btn-neon.css
+++ b/jobs/Content/.btn-neon.css
@@ -1,15 +1,29 @@
-
-
-body{
-    margin:0;
-    padding:0;
+/**{
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     height: 100vh;
     background: black;
     font-family: consolas;
-    color:white;
+    color: white;
+}*/
+h1{
+    justify-content: center;
+    text-align: center;
+}
+body {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*height: 100vh;*/
+    background: black;
+    font-family: consolas;
+    color: white;
 }
 .btn-neon{
     position:relative;
@@ -35,7 +49,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+    text-align: center;
 }
 .btn-group{
     position: relative;
