--- a/jobs/Content/navdropdown.css
+++ b/jobs/Content/navdropdown.css
@@ -6,12 +6,15 @@
     box-sizing: border-box;
     font-family: "Poppins",sans-serif;
     color: white;
+    justify-content: center;
+    text-align: center;
 }
 
 
 header {
     z-index: 999;
-    position: absolute;
+    /*position: absolute;*/
+    position:relative;
     top: 0;
     left: 0;
     width: 100%;
